New method of building command